# zkraken-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  endpoint.md
.github/workflows/: ci.yml  release-please.yml
src/: lib.rs  main.rs
