[package]
name = "zkraken-lib"
version = "0.2.0-alpha"
edition = "2021"
repository = "https://github.com/Huskehhh/zkraken-lib"
description = "A cross-platform driver library for the Kraken Z series AIO coolers written in Rust. "
license = "MIT"

[dependencies]
hidapi-rusb = "1.3.0"
rusb = "0.9"
color-eyre = "0.6"
image = "0.24"
